--- a/DiageoMDMWeb/src/main/webapp/recoverPassword.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/recoverPassword.xhtml
@@ -14,13 +14,43 @@ and open the template in the editor.
         <title>#{msg.diageo}</title>
     </h:head>
     <h:body>
-        <h:form>
+        <h:form id="form"> 
             <div class="banner">
                 <p:graphicImage value="/resources/images/logo/logoDiageoBlanco.png" style="top: 20px;position: fixed;left: 3%"/>
             </div>
             <div style="width: 100%;text-align: center;top: 300px;position: fixed">
-                #{recoverPasswordBean.msg}
+                <h:panelGroup id="pg" rendered="#{recoverPasswordBean.renderForm}">
+                    <h:panelGroup style="width: 100%">
+                        <p:password id="pwd1" match="pwd2" label="#{msg.cam_pass_nueva_contra}" required="true" feedback="true" style="width: 23%"
+                                    value="#{recoverPasswordBean.password}" 
+                                    goodLabel="#{msg.cam_pass_good}" weakLabel="#{msg.cam_pass_weak}" strongLabel="#{msg.cam_pass_strong}" promptLabel="#{msg.cam_pass_promt}"/>
+                        <p:commandButton icon="fa fa-warning" style="width: 2%" type="button" onclick="PF('wvHelp').show();"/>
+                    </h:panelGroup>
+                    <p:watermark for="pwd1" value="#{msg.cam_pass_nueva_contra}"/>
+                    <br/><br/>
+                    <p:password id="pwd2" label="#{msg.cam_pass_repetir_contra}" required="true" feedback="true" style="width: 25%" 
+                                value="#{recoverPasswordBean.password}" 
+                                goodLabel="#{msg.cam_pass_good}" weakLabel="#{msg.cam_pass_weak}" strongLabel="#{msg.cam_pass_strong}" promptLabel="#{msg.cam_pass_promt}"/>
+                    <p:watermark for="pwd2" value="#{msg.cam_pass_repetir_contra}"/>
+                    <br/><br/>
+                    <p:commandButton value="#{msg.btn_send}" styleClass="button" style="left: 0px" process="@all" update="form:mCamPas"
+                                     actionListener="#{recoverPasswordBean.changePassword()}"/>
+                </h:panelGroup>
+                <h:outputLabel rendered="#{!recoverPasswordBean.renderForm}" value="#{recoverPasswordBean.message}" escape="false"/>
+                <br/><br/>
+                <p:commandLink value="Login" action="#{recoverPasswordBean.backLogin()}" process="@this" update="@form"/>
+                <br/><br/>
+                <p:messages id="mCamPas" closable="true" showDetail="true" showSummary="false"/>
             </div>
+        </h:form>
+        <h:form id="formCamPassModal">
+            <p:dialog id="dHelp" widgetVar="wvHelp" width="33%" header="#{msg.cam_pass_header_pass_rules}" closeOnEscape="true" modal="true">
+                <p:panelGrid columns="1">
+                    <h:outputLabel value="- #{msg.cam_pass_pass_rules}"/>
+                    <h:outputLabel value="- #{msg.cam_pass_pass_rules_1}"/>
+                    <h:outputLabel value="- #{msg.cam_pass_pass_rules_2}"/>
+                </p:panelGrid>
+            </p:dialog>
         </h:form>
     </h:body>
 </html>
