--- a/DiageoMDMWeb/src/main/webapp/admin/canal/crearCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/canal/crearCanal.xhtml
@@ -10,14 +10,26 @@
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
+                <style>
+                    .ui-messages-error, .ui-message-error {
+                        width: 68%;
+                    }
+                </style>
                 <h:form id="formCanal">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
-                        <h:panelGroup id="pgChaDetalle" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                    <p:fieldset legend="#{msg.m_canal}" style="width: 90%">
+                        <br/>
+                        <h:panelGroup id="pgChaDetalle" >
                             <h:panelGrid columns="2" style="width: 100%">
                                 <h:outputLabel value="#{msg.can_nombre}" style="width: 30%"/>
-                                <p:inputText id="itNombre" value="#{crearChannel.nombreChannel}" required="true" label="#{msg.can_nombre}" style="width: 70%"/>
+                                <h:panelGroup>
+                                    <p:inputText id="itNombre" value="#{crearChannel.nombreChannel}" required="true" label="#{msg.can_nombre}" style="width: 70%"/>
+                                    <p:message for="itNombre"/>
+                                </h:panelGroup>
                                 <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
-                                <p:inputText id="itAthenaCode" value="#{crearChannel.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                <h:panelGroup>
+                                    <p:inputText id="itAthenaCode" value="#{crearChannel.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                    <p:message for="itAthenaCode"/>
+                                </h:panelGroup>
                                 <h:outputLabel value="#{msg.estado}"/>
                                 <p:selectBooleanCheckbox label="#{msg.usu_activo}" value="#{crearChannel.estado}"/>
                             </h:panelGrid> 
@@ -25,11 +37,10 @@
                             <br/>
                             <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" 
                                              actionListener="#{crearChannel.createChannel()}"
-                                             styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
+                                             styleClass="button"/>
                             <br/>
-                            <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false" />
                         </h:panelGroup>
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
 
