--- a/DiageoMDMWeb/src/main/webapp/admin/distributorLocation/createDistributorLocation.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distributorLocation/createDistributorLocation.xhtml
@@ -11,27 +11,37 @@
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
-
+                <style>
+                    .ui-messages-error, .ui-message-error {
+                        width: 68%;
+                    }
+                </style>
                 <h:form id="formDistri">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
-                        <h:panelGroup id="pgDistri" style="width: 90%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                    <p:fieldset legend="#{msg.regional}" style="width: 90%">
+                        <br/>
+                        <h:panelGroup id="pgDistri">
                             <h:panelGrid columns="1" style="width: 100%">
                                 <h:panelGrid columns="4" style="width: 100%">
                                     <h:outputLabel value="#{msg.regional}"/>                                    
-                                    <p:inputText id="itNameRegional" label="#{msg.regional}" required="true" value="#{regionalCreateBean.regionalName}" style="width: 85%"/>
-                                    <h:outputLabel value="#{msg.athena_code}"/>                                    
-                                    <p:inputText id="itAthenaCode" label="#{msg.athena_code}" required="true" value="#{regionalCreateBean.athenaCode}" style="width: 85%"/>
+                                    <h:panelGroup>
+                                        <p:inputText id="itNameRegional" label="#{msg.regional}" required="true" value="#{regionalCreateBean.regionalName}" style="width: 85%"/>
+                                        <p:message for="itNameRegional"/>
+                                    </h:panelGroup>
+                                    <h:outputLabel value="#{msg.athena_code}"/>
+                                    <h:panelGroup>
+                                        <p:inputText id="itAthenaCode" label="#{msg.athena_code}" required="true" value="#{regionalCreateBean.athenaCode}" style="width: 85%"/>
+                                        <p:message for="itAthenaCode"/>
+                                    </h:panelGroup>
                                 </h:panelGrid>
                                 <br/>                                
                             </h:panelGrid>
                             <br/>                            
                             <br/>
                             <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" actionListener="#{regionalCreateBean.updateRegional()}"
-                                             styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
+                                             styleClass="button"/>
                             <br/>
-                            <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false" />
                         </h:panelGroup>
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
 
