--- a/DiageoMDMWeb/src/main/webapp/admin/distributorLocation/searchDistributorLocation.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/distributorLocation/searchDistributorLocation.xhtml
@@ -11,12 +11,17 @@
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
+                <style>
+                    .ui-messages-error, .ui-message-error {
+                        width: 68%;
+                    }
+                </style>
                 <h:form id="formDistri">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
+                    <p:fieldset legend="#{msg.regional}" style="width: 90%">
+                        <br/>
                         <p:dataTable id="dtDistri" value="#{regionalSearchBean.listRegional}" var="reg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"                                     
-                                     rendered="#{regionalSearchBean.detail}" paginator="true"
-                                     style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
+                                     rendered="#{regionalSearchBean.detail}" paginator="true">
                             <p:column headerText="#{msg.regional}" filterBy="#{reg.nameRegional}" filterMatchMode="startsWith">
                                 <h:outputLabel value="#{reg.nameRegional}"/>
                             </p:column>
@@ -29,26 +34,33 @@
                             </p:column>
                         </p:dataTable>                             
 
-                        <h:panelGroup id="pgDistri" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                        <h:panelGroup id="pgDistri">
                             <h:panelGroup id="pgDistriDetail" rendered="#{!regionalSearchBean.detail}" style="width: 100%">
                                 <h:panelGrid columns="1" style="width: 100%">
                                     <h:panelGrid columns="4" style="width: 100%">
                                         <h:outputLabel value="#{msg.regional}"/>                                    
-                                        <p:inputText id="itNameRegional" label="#{msg.regional}" required="true" value="#{regionalSearchBean.regionalName}" style="width: 85%"/>
+                                        <h:panelGroup>
+                                            <p:inputText id="itNameRegional" label="#{msg.regional}" required="true" value="#{regionalSearchBean.regionalName}" style="width: 85%"/>
+                                            <p:message for="itNameRegional"/>
+                                        </h:panelGroup>
                                         <h:outputLabel value="#{msg.athena_code}"/>                                    
-                                        <p:inputText id="itAthenaCode" label="#{msg.athena_code}" required="true" value="#{regionalSearchBean.athenaCode}" style="width: 85%"/>
+                                        <h:panelGroup>
+                                            <p:inputText id="itAthenaCode" label="#{msg.athena_code}" required="true" value="#{regionalSearchBean.athenaCode}" style="width: 85%"/>
+                                            <p:message for="itAthenaCode"/>
+                                        </h:panelGroup>
                                     </h:panelGrid>
                                     <br/>                                
                                 </h:panelGrid>
                                 <br/>                            
                                 <br/>
                                 <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" actionListener="#{regionalSearchBean.updateRegional()}"
-                                                 styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
+                                                 styleClass="button" style="left: 0%"/>
+                                <p:commandButton value="#{msg.btn_regresar}" immediate="true" actionListener="#{regionalSearchBean.back()}" update="@form"
+                                                 styleClass="button" style="left: 0%"/> 
                                 <br/>
-                                <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false" />
                             </h:panelGroup>
                         </h:panelGroup>
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
 
