--- a/DiageoMDMWeb/src/main/webapp/admin/potential/searchPotential.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/potential/searchPotential.xhtml
@@ -1,17 +1,86 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
-
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <body>
-
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
-
             <ui:define name="content">
-                
+                <h:form id="formPotential">
+                    <p:fieldset legend="#{msg.m_management_potential}" style="width: 90%">                        
+                        <br/>
+                        <p:dataTable id="dtPotential" value="#{potentialSearchBean.listPotential}" var="pot" paginatorAlwaysVisible="false" rows="15"
+                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                     rendered="#{potentialSearchBean.seeDetail}" paginator="true" style="word-wrap: break-word;">
+                            <p:column headerText="#{msg.sub_seg_nombre}">
+                                <h:outputLabel value="#{pot.namePotential}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.athena_code}">
+                                <h:outputLabel value="#{pot.distri_1}"/>
+                            </p:column>                                                      
+                            <p:column headerText="#{msg.can_canal}">
+                                <h:outputLabel value="#{pot.subSegmentId.segmentId.subChannelId.channelId.nameChannel}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.sub_subcanal}">
+                                <h:outputLabel value="#{pot.subSegmentId.segmentId.subChannelId.nameSubChannel}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.seg_segmento}">
+                                <h:outputLabel value="#{pot.subSegmentId.segmentId.nameSegment}"/>
+                            </p:column>
+                            <p:column headerText="#{msg.sub_seg_subsegmento}">
+                                <h:outputLabel value="#{pot.subSegmentId.nameSubsegment}"/>
+                            </p:column>
+                            <p:column>
+                                <p:commandLink value="#{msg.btn_detalle}" actionListener="#{potentialSearchBean.detailPotential(pot)}" 
+                                               style="color: blue" process="@this" update="@form"/>
+                            </p:column>
+                        </p:dataTable>
+
+                        <h:panelGroup id="pgPot">
+                            <h:panelGroup id="pgPotDetail" rendered="#{!potentialSearchBean.seeDetail}" style="width: 100%">
+                                <h:panelGrid id="pgSegment" columns="4" style="width: 95%">
+                                    <h:outputLabel value="#{msg.can_canal}"/>
+                                    <p:selectOneMenu value="#{potentialSearchBean.channel}" converter="channelConverter" style="width: 90%">
+                                        <f:selectItems value="#{potentialSearchBean.listChannel}" var="chan" itemLabel="#{chan.nameChannel}"/>
+                                        <p:ajax process="@this" update="formPotential:somsubcha formPotential:somseg formPotential:somsubseg" listener="#{potentialSearchBean.listenerChannel()}"/>
+                                    </p:selectOneMenu>
+                                    <h:outputLabel value="#{msg.sub_subcanal}"/>
+                                    <p:selectOneMenu id="somsubcha" value="#{potentialSearchBean.subChannel}" converter="subChannelConverter" style="width: 90%">
+                                        <f:selectItems value="#{potentialSearchBean.listSubChannel}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
+                                        <p:ajax process="@this" update="formPotential:somseg formPotential:somsubseg" listener="#{potentialSearchBean.listenerSubChannel()}"/>
+                                    </p:selectOneMenu>
+                                    <h:outputLabel value="#{msg.seg_segmento}"/>
+                                    <p:selectOneMenu id="somseg" value="#{potentialSearchBean.segment}" converter="segmentoConverter" style="width: 90%">
+                                        <f:selectItems value="#{potentialSearchBean.listSegment}" var="seg" itemLabel="#{seg.nameSegment}"/>
+                                        <p:ajax process="@this" update="formPotential:somsubseg" listener="#{potentialSearchBean.listenerSegment()}"/>
+                                    </p:selectOneMenu>
+                                    <h:outputLabel value="#{msg.sub_seg_subsegmento}"/>
+                                    <p:selectOneMenu id="somsubseg" value="#{potentialSearchBean.subSegmento}" converter="subSegmentoConverter" style="width: 90%">
+                                        <f:selectItems value="#{potentialSearchBean.listSubSegment}" var="subseg" itemLabel="#{subseg.nameSubsegment}"/>                                        
+                                    </p:selectOneMenu>
+                                    <h:outputLabel value="#{msg.out_potencial}"/>
+                                    <h:panelGroup>
+                                        <p:inputText id="itName" value="#{potentialSearchBean.name}" required="true" label="#{msg.out_potencial}" style="width: 93%"/>
+                                        <p:message for="itName"/>
+                                    </h:panelGroup>           
+                                    <h:outputLabel value="#{msg.athena_code}"/>
+                                    <h:panelGroup>
+                                        <p:inputText id="itAthenaCode" value="#{potentialSearchBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 93%"/>
+                                        <p:message for="itAthenaCode"/>
+                                    </h:panelGroup>           
+                                </h:panelGrid>
+                                <br/><br/>
+                                <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" actionListener="#{potentialSearchBean.createPotential()}" styleClass="button"
+                                                 style="left: 0%"/>
+                                <p:commandButton value="#{msg.btn_regresar}" immediate="true" actionListener="#{potentialSearchBean.back()}" update="@form"
+                                                 styleClass="button" style="left: 0%"/> 
+                            </h:panelGroup>
+                        </h:panelGroup>
+                    </p:fieldset>
+                </h:form>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
