--- a/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/segmento/consultarSegmento.xhtml
@@ -11,12 +11,16 @@
         <ui:composition template="/WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
+                <style>
+                    .ui-messages-error, .ui-message-error {
+                        width: 68%;
+                    }
+                </style>
                 <h:form id="formSeg">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
+                    <p:fieldset legend="#{msg.m_segmento}" style="width: 90%">
                         <p:dataTable id="dtChannel" value="#{segementoConsultarBean.listaSegmento}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{segementoConsultarBean.verDetalle}" paginator="true"
-                                     style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
+                                     rendered="#{segementoConsultarBean.verDetalle}" paginator="true">
                             <p:column headerText="#{msg.seg_nombre}">
                                 <h:outputLabel value="#{seg.nameSegment}"/>
                             </p:column>
@@ -39,23 +43,28 @@
                             </p:column>
                         </p:dataTable>
 
-
-                        <h:panelGroup id="pg" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">                            
+                        <h:panelGroup id="pg">                            
                             <h:panelGroup id="pgDetalle" rendered="#{!segementoConsultarBean.verDetalle}" style="width: 100%">
                                 <h:panelGrid columns="2" style="width: 100%">
                                     <h:outputLabel value="#{msg.seg_nombre}" style="width: 30%"/>
-                                    <p:inputText id="itNombre" value="#{segementoConsultarBean.nombre}" required="true" label="#{msg.seg_nombre}" style="width: 70%"/>
-
+                                    <h:panelGroup>
+                                        <p:inputText id="itNombre" value="#{segementoConsultarBean.nombre}" required="true" label="#{msg.seg_nombre}" style="width: 70%"/>
+                                        <p:message for="itNombre"/>
+                                    </h:panelGroup>
                                     <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
-                                    <p:inputText id="itAthenaCode" value="#{segementoConsultarBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
-
+                                    <h:panelGroup>
+                                        <p:inputText id="itAthenaCode" value="#{segementoConsultarBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                        <p:message for="itAthenaCode"/>
+                                    </h:panelGroup>
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
-                                    <p:selectOneMenu value="#{segementoConsultarBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}">
+                                    <p:selectOneMenu value="#{segementoConsultarBean.canal}" converter="channelConverter"
+                                                     required="true" label="#{msg.can_canal}" style="width: 67%">
                                         <f:selectItems value="#{segementoConsultarBean.listaCanales}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                         <p:ajax listener="#{segementoConsultarBean.listenerListaSubCanales()}" process="@this" update="somSubCanal"/>
                                     </p:selectOneMenu>
                                     <h:outputLabel value="#{msg.sub_subcanal}" style="width: 30%"/>
-                                    <p:selectOneMenu id="somSubCanal" value="#{segementoConsultarBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}">
+                                    <p:selectOneMenu id="somSubCanal" value="#{segementoConsultarBean.subCanal}" converter="subChannelConverter" 
+                                                     required="true" label="#{msg.sub_subcanal}" style="width: 67%">
                                         <f:selectItems value="#{segementoConsultarBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                     </p:selectOneMenu>
                                     <h:outputLabel value="#{msg.estado}"/>
@@ -64,14 +73,12 @@
                                 <br/><br/>
                                 <p:commandButton value="#{msg.btn_send}" process="@this pg" update="pg" 
                                                  actionListener="#{segementoConsultarBean.guardarCambios()}"
-                                                 styleClass="button" style="width: 30%;"/>
+                                                 styleClass="button" style="left: 0%"/>
                                 <p:commandButton value="#{msg.btn_regresar}" immediate="true" actionListener="#{segementoConsultarBean.regresar()}" update="@form"
-                                                 styleClass="button" style="width: 30%;left: 10%"/> 
-                                <p:messages closable="true" showDetail="true" showSummary="false" globalOnly="false"/>
+                                                 styleClass="button" style="left: 0%"/> 
                             </h:panelGroup>                            
                         </h:panelGroup>
-
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
 
