--- a/DiageoMDMWeb/src/main/webapp/admin/segmento/crearSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/segmento/crearSegmento.xhtml
@@ -11,23 +11,35 @@
         <ui:composition template="./../../WEB-INF/templates/diageoWebTemplate.xhtml">
 
             <ui:define name="content">
+                <style>
+                    .ui-messages-error, .ui-message-error {
+                        width: 68%;
+                    }
+                </style>
                 <h:form id="form">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
-                        <h:panelGroup id="pgChaDetalle" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
+                    <p:fieldset legend="#{msg.m_segmento}" style="width: 90%">
+                        <h:panelGroup id="pgChaDetalle">
                             <h:panelGrid columns="2" style="width: 100%">
                                 <h:outputLabel value="#{msg.seg_nombre}" style="width: 30%"/>
-                                <p:inputText id="itNombre" value="#{segmentoCrearBean.nombre}" required="true" label="#{msg.can_nombre}" style="width: 70%"/>
-                                
+                                <h:panelGroup>
+                                    <p:inputText id="itNombre" value="#{segmentoCrearBean.nombre}" required="true" label="#{msg.seg_nombre}" style="width: 70%"/>
+                                    <p:message for="itNombre"/>
+                                </h:panelGroup>
+
                                 <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
-                                <p:inputText id="itAthenaCode" value="#{segmentoCrearBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
-                                
+                                <h:panelGroup>
+                                    <p:inputText id="itAthenaCode" value="#{segmentoCrearBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                    <p:message for="itAthenaCode"/>
+                                </h:panelGroup>
+
                                 <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
-                                <p:selectOneMenu value="#{segmentoCrearBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}">
+                                <p:selectOneMenu value="#{segmentoCrearBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}" style="width: 67%">
                                     <f:selectItems value="#{segmentoCrearBean.listaCanales}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                     <p:ajax listener="#{segmentoCrearBean.listenerListaSubCanales()}" process="@this" update="somSubCanal"/>
                                 </p:selectOneMenu>
                                 <h:outputLabel value="#{msg.sub_subcanal}" style="width: 30%"/>
-                                <p:selectOneMenu id="somSubCanal" value="#{segmentoCrearBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}">
+                                <p:selectOneMenu id="somSubCanal" value="#{segmentoCrearBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}"
+                                                 style="width: 67%">
                                     <f:selectItems value="#{segmentoCrearBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                 </p:selectOneMenu>
                                 <h:outputLabel value="#{msg.estado}"/>
@@ -37,11 +49,10 @@
                             <br/>
                             <p:commandButton value="#{msg.btn_send}" process="@all" update="@form" 
                                              actionListener="#{segmentoCrearBean.guardarCambios()}"
-                                             styleClass="button" style="width: 40%;left: 50%;-webkit-transform: translate(-50%)"/>
+                                             styleClass="button"/>
                             <br/>
-                            <p:messages id="msg" closable="true" showDetail="true" showSummary="false" globalOnly="false" />
                         </h:panelGroup>
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
 
