--- a/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subcanal/consultarSubCanal.xhtml
@@ -12,11 +12,11 @@
 
             <ui:define name="content">
                 <h:form id="formSubCanal">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
+                    <p:fieldset legend="#{msg.m_canal_sub}" style="width: 90%">
+                        <br/>
                         <p:dataTable id="dtChannel" value="#{consultarSubChannel.listaSubChannel}" var="subcha" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{consultarSubChannel.verDetalle}" paginator="true"
-                                     style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
+                                     rendered="#{consultarSubChannel.verDetalle}" paginator="true">
                             <p:column headerText="#{msg.sub_can_nombre}">
                                 <h:outputLabel value="#{subcha.nameSubChannel}"/>
                             </p:column>
@@ -37,7 +37,7 @@
                         </p:dataTable>
 
 
-                        <h:panelGroup id="pgChannel" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">                            
+                        <h:panelGroup id="pgChannel" >                            
                             <h:panelGroup id="pgChaDetalle" rendered="#{!consultarSubChannel.verDetalle}" style="width: 100%">
                                 <h:panelGrid columns="2" style="width: 100%">
                                     <h:outputLabel value="#{msg.sub_can_nombre}" style="width: 30%"/>
@@ -47,7 +47,7 @@
                                     <p:inputText id="itAthenaCode" value="#{consultarSubChannel.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>                             
 
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
-                                    <p:selectOneMenu value="#{consultarSubChannel.channel}" converter="channelConverter">                                        
+                                    <p:selectOneMenu value="#{consultarSubChannel.channel}" converter="channelConverter" style="width: 67%">
                                         <f:selectItems value="#{consultarSubChannel.listaChannel}" var="channel" itemLabel="#{channel.nameChannel}"/>
                                     </p:selectOneMenu>
                                     <h:outputLabel value="#{msg.estado}"/>
@@ -56,14 +56,12 @@
                                 <br/><br/>
                                 <p:commandButton value="#{msg.btn_send}" process="@this pgChannel" update="pgChannel" 
                                                  actionListener="#{consultarSubChannel.modificarChannel()}"
-                                                 styleClass="button" style="width: 30%;"/>
+                                                 styleClass="button" style="width: 20%;left: 0%"/>
                                 <p:commandButton value="#{msg.btn_regresar}" immediate="true" actionListener="#{consultarSubChannel.regresar()}" update="@form"
-                                                 styleClass="button" style="width: 30%;left: 10%"/> 
-                                <p:messages closable="true" showDetail="true" showSummary="false" globalOnly="false"/>
+                                                 styleClass="button" style="width: 20%;left: 0%"/> 
                             </h:panelGroup>                            
                         </h:panelGroup>
-
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
 
