--- a/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/admin/subsegmento/consultarSubSegmento.xhtml
@@ -5,18 +5,23 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <h:body>
-
         <ui:composition template="/WEB-INF/templates/diageoWebTemplate.xhtml">
-
             <ui:define name="content">
+                <style>
+                    .ui-messages-error, .ui-message-error {
+                        width: 68%;
+                    }
+                    fieldset .ui-fieldset-legend {
+                        width: 17% !important;
+                    }
+                </style>
                 <h:form id="formSeg">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 100%">
+                    <p:fieldset legend="#{msg.m_segmento_sub}" style="width: 90%">
+                        <br/>
                         <p:dataTable id="dtChannel" value="#{subSegmentoConsultarBean.listaSubSegmentos}" var="seg" paginatorAlwaysVisible="false" rows="15"
                                      paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                     rendered="#{subSegmentoConsultarBean.verDetalle}" paginator="true"
-                                     style="width: 60%;left: 50%;-webkit-transform: translate(-50%);position: absolute;">
+                                     rendered="#{subSegmentoConsultarBean.verDetalle}" paginator="true" style="word-wrap: break-word;">
                             <p:column headerText="#{msg.sub_seg_nombre}">
                                 <h:outputLabel value="#{seg.nameSubsegment}"/>
                             </p:column>
@@ -37,35 +42,41 @@
                                 <p:graphicImage value="/resources/images/iconos/chulo.png" width="20px" rendered="#{seg.stateSubSegment eq '1'}"/>
                             </p:column>
                             <p:column>
-                                <p:commandLink value="#{msg.btn_detalle}" actionListener="#{subSegmentoConsultarBean.detalle(seg)}" 
+                                <p:commandLink value="#{msg.btn_detalle}" actionListener="#{subSegmentoConsultarBean.detalleSub(seg)}" 
                                                style="color: blue" process="@this" update="@form"/>
                             </p:column>
                         </p:dataTable>
 
 
-                        <h:panelGroup id="pg" style="width: 40%;left: 50%;-webkit-transform: translate(-50%);position: absolute">                            
+                        <h:panelGroup id="pg">                            
                             <h:panelGroup id="pgDetalle" rendered="#{!subSegmentoConsultarBean.verDetalle}" style="width: 100%">
                                 <h:panelGrid columns="2" style="width: 100%">
                                     <h:outputLabel value="#{msg.sub_seg_nombre}" style="width: 30%"/>
-                                    <p:inputText id="itNombre" value="#{subSegmentoConsultarBean.nombre}" required="true" label="#{msg.sub_seg_nombre}" style="width: 70%"/>
-                                    
+                                    <h:panelGroup>
+                                        <p:inputText id="itNombre" value="#{subSegmentoConsultarBean.nombre}" required="true" label="#{msg.sub_seg_nombre}" style="width: 70%"/>
+                                        <p:message for="itNombre"/>
+                                    </h:panelGroup>
+
                                     <h:outputLabel value="#{msg.athena_code}" style="width: 30%"/>
-                                    <p:inputText id="itAthenaCode" value="#{subSegmentoConsultarBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                    <h:panelGroup>
+                                        <p:inputText id="itAthenaCode" value="#{subSegmentoConsultarBean.athenaCode}" required="true" label="#{msg.athena_code}" style="width: 70%"/>
+                                        <p:message for="itAthenaCode"/>
+                                    </h:panelGroup>
 
                                     <h:outputLabel value="#{msg.can_canal}" style="width: 30%"/>
-                                    <p:selectOneMenu value="#{subSegmentoConsultarBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}">
+                                    <p:selectOneMenu value="#{subSegmentoConsultarBean.canal}" converter="channelConverter" required="true" label="#{msg.can_canal}" style="width: 67%">
                                         <f:selectItems value="#{subSegmentoConsultarBean.listaCanales}" var="cha" itemLabel="#{cha.nameChannel}"/>
                                         <p:ajax listener="#{subSegmentoConsultarBean.listenerListaSubCanales()}" process="@this" update="somSubCanal"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.sub_subcanal}" style="width: 30%"/>
-                                    <p:selectOneMenu id="somSubCanal" value="#{subSegmentoConsultarBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}">
+                                    <p:selectOneMenu id="somSubCanal" value="#{subSegmentoConsultarBean.subCanal}" converter="subChannelConverter" required="true" label="#{msg.sub_subcanal}" style="width: 67%">
                                         <f:selectItems value="#{subSegmentoConsultarBean.listaSubCanales}" var="subcha" itemLabel="#{subcha.nameSubChannel}"/>
                                         <p:ajax listener="#{subSegmentoConsultarBean.listenerSegmento()}" process="@this" update="somSegmento"/>
                                     </p:selectOneMenu>
 
                                     <h:outputLabel value="#{msg.seg_segmento}" style="width: 30%"/>
-                                    <p:selectOneMenu id="somSegmento" value="#{subSegmentoConsultarBean.segmento}" converter="segmentoConverter" required="true" label="#{msg.seg_segmento}">
+                                    <p:selectOneMenu id="somSegmento" value="#{subSegmentoConsultarBean.segmento}" converter="segmentoConverter" required="true" label="#{msg.seg_segmento}" style="width: 67%">
                                         <f:selectItems value="#{subSegmentoConsultarBean.listaSegmento}" var="subseg" itemLabel="#{subseg.nameSegment}"/>
                                     </p:selectOneMenu>
 
@@ -75,18 +86,14 @@
                                 <br/><br/>
                                 <p:commandButton value="#{msg.btn_send}" process="@this pg" update="pg" 
                                                  actionListener="#{subSegmentoConsultarBean.guardarCambios()}"
-                                                 styleClass="button" style="width: 30%;"/>
+                                                 styleClass="button" style="left: 0%"/>
                                 <p:commandButton value="#{msg.btn_regresar}" immediate="true" actionListener="#{subSegmentoConsultarBean.regresar()}" update="@form"
-                                                 styleClass="button" style="width: 30%;left: 10%"/> 
-                                <p:messages closable="true" showDetail="true" showSummary="false" globalOnly="false"/>
+                                                 styleClass="button" style="left: 0%"/> 
                             </h:panelGroup>                            
                         </h:panelGroup>
-
-                    </div>
+                    </p:fieldset>
                 </h:form>
             </ui:define>
-
         </ui:composition>
-
     </h:body>
 </html>
