--- a/DiageoMDMWeb/src/main/webapp/outlet/relationCustomer.xhtml
+++ b/DiageoMDMWeb/src/main/webapp/outlet/relationCustomer.xhtml
@@ -5,29 +5,22 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <body>
-
         <ui:composition template="./../WEB-INF/templates/diageoWebTemplate.xhtml">
-
             <ui:define name="content">
                 <h:form id="formRelationCustomer">
-                    <div style="left: 50%;-webkit-transform: translate(-50%);position: absolute;width: 90%">
-                        <h:panelGroup style="width: 100%;left: 50%;-webkit-transform: translate(-50%);position: absolute">
-                            <h:panelGrid columns="3" style="width: 70%">
-                                <h:outputLabel value="#{msg.code}"/>
-                                <p:inputText id="itCode" label="#{msg.code}" value="#{relationCustomerBean.codeOutlet}" required="true"/>
-                                <p:selectOneRadio id="console" value="#{relationCustomerBean.typeOutlet}" style="width: 50%">
-                                    <f:selectItem itemLabel="#{msg.m_outlet}" itemValue="O"/>
-                                    <f:selectItem itemLabel="#{msg.usu_chain}" itemValue="CHA" />
-                                </p:selectOneRadio>
-                            </h:panelGrid>
-                        </h:panelGroup>
-                    </div>
+                    <h:panelGroup>
+                        <h:panelGrid columns="3" style="width: 70%">
+                            <h:outputLabel value="#{msg.code}"/>
+                            <p:inputText id="itCode" label="#{msg.code}" value="#{relationCustomerBean.codeOutlet}" required="true"/>
+                            <p:selectOneRadio id="console" value="#{relationCustomerBean.typeOutlet}" style="width: 50%">
+                                <f:selectItem itemLabel="#{msg.m_outlet}" itemValue="O"/>
+                                <f:selectItem itemLabel="#{msg.usu_chain}" itemValue="CHA" />
+                            </p:selectOneRadio>
+                        </h:panelGrid>
+                    </h:panelGroup>
                 </h:form>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
